src/objects/Galaxy_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SnapshotReason__c</fullName>
        <label>Snapshot Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SnapshotType__c</fullName>
        <label>Snapshot Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Budget Call</fullName>
                </value>
                <value>
                    <fullName>Rent Estimate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <defaultValue>DATEVALUE(Now())</defaultValue>
        <inlineHelpText>The system will make a data snapshot on the data specified</inlineHelpText>
        <label>Snapshot Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusMessage__c</fullName>
        <defaultValue>&quot;On the click of the &apos;Save&apos; button, a request for snapshot will be created. The scheduled job will run on the date specified at 11:00 PM EST. For more information, please contact your system Administrator.&quot;</defaultValue>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Scheduled&quot;</defaultValue>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Galaxy Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>SnapshotType__c</columns>
        <columns>Status__c</columns>
        <columns>SnapshotReason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Galaxy Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Galaxy Snapshot</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>